	PR c++/48089 	* semantics.c (potential_constant_expression_1): Change error about 	use of *this in constructor into sorry.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@171687 138bc75d-0d04-0410-961f-82ee72b054a4